// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. a primary image 1`] = `
<div>
  <div>
    <div>
      <div>
        <div>
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M22 9.98V19C22 20.1 21.1 21 20 21H4C2.9 21 2 20.1 2 19L2.01 7C2.01 5.9 2.9 5 4 5H14.1C14.04 5.32 14 5.66 14 6C14 6.34 14.04 6.68 14.1 7H4L12 12L15.67 9.71C16.14 10.14 16.69 10.47 17.3 10.69L12 14L4 9V19H20V10.9C20.74 10.75 21.42 10.42 22 9.98ZM16 6C16 7.66 17.34 9 19 9C20.66 9 22 7.66 22 6C22 4.34 20.66 3 19 3C17.34 3 16 4.34 16 6Z"
              fill="black"
            />
          </svg>
          <div>
            Check your inbox
          </div>
        </div>
        <button>
          <svg
            fill="none"
            height="14"
            viewBox="0 0 14 14"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14 1.41L12.59 0L7 5.59L1.41 0L0 1.41L5.59 7L0 12.59L1.41 14L7 8.41L12.59 14L14 12.59L8.41 7L14 1.41Z"
              fill="black"
            />
          </svg>
        </button>
      </div>
      <div>
        <div>
          Verify your email by clicking on the link sent to your inbox.
        </div>
      </div>
    </div>
  </div>
  <div
    id="article-marketing-header"
  />
  <article
    data-article-identifier="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
    data-article-sectionname="Some Section"
    data-article-template="mainstandard"
    id="article-main"
  >
    <Head
      articleUrl="https://url.io"
      domainSpecificUrl="https://www.thetimes.co.uk"
      swgProductId={null}
    />
    <div>
      <AdContainer
        slotName="header"
      />
    </div>
    <main>
      <div />
      <article>
        <div>
          <div>
            <div
              id="0"
            >
              <div>
                <div>
                  <ArticleImage
                    captionOptions={
                      Object {
                        "caption": "A Caption",
                        "credits": "Some Credits",
                      }
                    }
                    imageOptions={
                      Object {
                        "display": "primary",
                        "highResSize": null,
                        "lowResQuality": 3,
                        "lowResSize": 400,
                        "ratio": "3:2",
                        "uri": "https://image-2.io",
                      }
                    }
                  />
                </div>
              </div>
            </div>
            <div
              id="paywall-portal-article-footer"
            />
          </div>
        </div>
        <ArticleExtras
          articleHeadline="Some Headline"
          articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
          articleUrl="https://url.io"
          commentingConfig={
            Object {
              "account": "dummiy-spotim-id",
            }
          }
          commentsEnabled={true}
          domainSpecificUrl="https://www.thetimes.co.uk"
          publishedTime="2015-03-13T18:54:58.000Z"
          relatedArticlesVisible={false}
          savingEnabled={true}
          section="Some Section"
          sharingEnabled={true}
        />
      </article>
    </main>
    <AdContainer
      slotName="pixel"
    />
    <AdContainer
      slotName="pixelteads"
    />
    <AdContainer
      slotName="pixelskin"
    />
  </article>
</div>
`;

exports[`2. a fullwidth image 1`] = `
<div>
  <div>
    <div>
      <div>
        <div>
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M22 9.98V19C22 20.1 21.1 21 20 21H4C2.9 21 2 20.1 2 19L2.01 7C2.01 5.9 2.9 5 4 5H14.1C14.04 5.32 14 5.66 14 6C14 6.34 14.04 6.68 14.1 7H4L12 12L15.67 9.71C16.14 10.14 16.69 10.47 17.3 10.69L12 14L4 9V19H20V10.9C20.74 10.75 21.42 10.42 22 9.98ZM16 6C16 7.66 17.34 9 19 9C20.66 9 22 7.66 22 6C22 4.34 20.66 3 19 3C17.34 3 16 4.34 16 6Z"
              fill="black"
            />
          </svg>
          <div>
            Check your inbox
          </div>
        </div>
        <button>
          <svg
            fill="none"
            height="14"
            viewBox="0 0 14 14"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14 1.41L12.59 0L7 5.59L1.41 0L0 1.41L5.59 7L0 12.59L1.41 14L7 8.41L12.59 14L14 12.59L8.41 7L14 1.41Z"
              fill="black"
            />
          </svg>
        </button>
      </div>
      <div>
        <div>
          Verify your email by clicking on the link sent to your inbox.
        </div>
      </div>
    </div>
  </div>
  <div
    id="article-marketing-header"
  />
  <article
    data-article-identifier="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
    data-article-sectionname="Some Section"
    data-article-template="mainstandard"
    id="article-main"
  >
    <Head
      articleUrl="https://url.io"
      domainSpecificUrl="https://www.thetimes.co.uk"
      swgProductId={null}
    />
    <div>
      <AdContainer
        slotName="header"
      />
    </div>
    <main>
      <div />
      <article>
        <div>
          <div>
            <div
              id="0"
            >
              <div>
                <div>
                  <ArticleImage
                    captionOptions={
                      Object {
                        "caption": "A Caption",
                        "credits": "Some Credits",
                      }
                    }
                    imageOptions={
                      Object {
                        "display": "fullwidth",
                        "highResSize": null,
                        "lowResQuality": 3,
                        "lowResSize": 400,
                        "ratio": "3:2",
                        "uri": "https://image-2.io",
                      }
                    }
                  />
                </div>
              </div>
            </div>
            <div
              id="paywall-portal-article-footer"
            />
          </div>
        </div>
        <ArticleExtras
          articleHeadline="Some Headline"
          articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
          articleUrl="https://url.io"
          commentingConfig={
            Object {
              "account": "dummiy-spotim-id",
            }
          }
          commentsEnabled={true}
          domainSpecificUrl="https://www.thetimes.co.uk"
          publishedTime="2015-03-13T18:54:58.000Z"
          relatedArticlesVisible={false}
          savingEnabled={true}
          section="Some Section"
          sharingEnabled={true}
        />
      </article>
    </main>
    <AdContainer
      slotName="pixel"
    />
    <AdContainer
      slotName="pixelteads"
    />
    <AdContainer
      slotName="pixelskin"
    />
  </article>
</div>
`;

exports[`3. a secondary image 1`] = `
<div>
  <div>
    <div>
      <div>
        <div>
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M22 9.98V19C22 20.1 21.1 21 20 21H4C2.9 21 2 20.1 2 19L2.01 7C2.01 5.9 2.9 5 4 5H14.1C14.04 5.32 14 5.66 14 6C14 6.34 14.04 6.68 14.1 7H4L12 12L15.67 9.71C16.14 10.14 16.69 10.47 17.3 10.69L12 14L4 9V19H20V10.9C20.74 10.75 21.42 10.42 22 9.98ZM16 6C16 7.66 17.34 9 19 9C20.66 9 22 7.66 22 6C22 4.34 20.66 3 19 3C17.34 3 16 4.34 16 6Z"
              fill="black"
            />
          </svg>
          <div>
            Check your inbox
          </div>
        </div>
        <button>
          <svg
            fill="none"
            height="14"
            viewBox="0 0 14 14"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14 1.41L12.59 0L7 5.59L1.41 0L0 1.41L5.59 7L0 12.59L1.41 14L7 8.41L12.59 14L14 12.59L8.41 7L14 1.41Z"
              fill="black"
            />
          </svg>
        </button>
      </div>
      <div>
        <div>
          Verify your email by clicking on the link sent to your inbox.
        </div>
      </div>
    </div>
  </div>
  <div
    id="article-marketing-header"
  />
  <article
    data-article-identifier="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
    data-article-sectionname="Some Section"
    data-article-template="mainstandard"
    id="article-main"
  >
    <Head
      articleUrl="https://url.io"
      domainSpecificUrl="https://www.thetimes.co.uk"
      swgProductId={null}
    />
    <div>
      <AdContainer
        slotName="header"
      />
    </div>
    <main>
      <div />
      <article>
        <div>
          <div>
            <div
              id="0"
            >
              <div>
                <div>
                  <ArticleImage
                    captionOptions={
                      Object {
                        "caption": "A Caption",
                        "credits": "Some Credits",
                      }
                    }
                    imageOptions={
                      Object {
                        "display": "secondary",
                        "highResSize": null,
                        "lowResQuality": 3,
                        "lowResSize": 400,
                        "ratio": "3:2",
                        "uri": "https://image-2.io",
                      }
                    }
                  />
                </div>
              </div>
            </div>
            <div
              id="paywall-portal-article-footer"
            />
          </div>
        </div>
        <ArticleExtras
          articleHeadline="Some Headline"
          articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
          articleUrl="https://url.io"
          commentingConfig={
            Object {
              "account": "dummiy-spotim-id",
            }
          }
          commentsEnabled={true}
          domainSpecificUrl="https://www.thetimes.co.uk"
          publishedTime="2015-03-13T18:54:58.000Z"
          relatedArticlesVisible={false}
          savingEnabled={true}
          section="Some Section"
          sharingEnabled={true}
        />
      </article>
    </main>
    <AdContainer
      slotName="pixel"
    />
    <AdContainer
      slotName="pixelteads"
    />
    <AdContainer
      slotName="pixelskin"
    />
  </article>
</div>
`;

exports[`4. an inline image 1`] = `
<div>
  <div>
    <div>
      <div>
        <div>
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M22 9.98V19C22 20.1 21.1 21 20 21H4C2.9 21 2 20.1 2 19L2.01 7C2.01 5.9 2.9 5 4 5H14.1C14.04 5.32 14 5.66 14 6C14 6.34 14.04 6.68 14.1 7H4L12 12L15.67 9.71C16.14 10.14 16.69 10.47 17.3 10.69L12 14L4 9V19H20V10.9C20.74 10.75 21.42 10.42 22 9.98ZM16 6C16 7.66 17.34 9 19 9C20.66 9 22 7.66 22 6C22 4.34 20.66 3 19 3C17.34 3 16 4.34 16 6Z"
              fill="black"
            />
          </svg>
          <div>
            Check your inbox
          </div>
        </div>
        <button>
          <svg
            fill="none"
            height="14"
            viewBox="0 0 14 14"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14 1.41L12.59 0L7 5.59L1.41 0L0 1.41L5.59 7L0 12.59L1.41 14L7 8.41L12.59 14L14 12.59L8.41 7L14 1.41Z"
              fill="black"
            />
          </svg>
        </button>
      </div>
      <div>
        <div>
          Verify your email by clicking on the link sent to your inbox.
        </div>
      </div>
    </div>
  </div>
  <div
    id="article-marketing-header"
  />
  <article
    data-article-identifier="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
    data-article-sectionname="Some Section"
    data-article-template="mainstandard"
    id="article-main"
  >
    <Head
      articleUrl="https://url.io"
      domainSpecificUrl="https://www.thetimes.co.uk"
      swgProductId={null}
    />
    <div>
      <AdContainer
        slotName="header"
      />
    </div>
    <main>
      <div />
      <article>
        <div>
          <div>
            <div
              id="0"
            >
              <div>
                <div>
                  <ArticleImage
                    captionOptions={
                      Object {
                        "caption": "A Caption",
                        "credits": "Some Credits",
                      }
                    }
                    imageOptions={
                      Object {
                        "display": "inline",
                        "highResSize": null,
                        "lowResQuality": 3,
                        "lowResSize": 400,
                        "ratio": "9:4",
                        "uri": "https://image-inline.io",
                      }
                    }
                  />
                </div>
              </div>
            </div>
            <div
              id="paywall-portal-article-footer"
            />
          </div>
        </div>
        <ArticleExtras
          articleHeadline="Some Headline"
          articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
          articleUrl="https://url.io"
          commentingConfig={
            Object {
              "account": "dummiy-spotim-id",
            }
          }
          commentsEnabled={true}
          domainSpecificUrl="https://www.thetimes.co.uk"
          publishedTime="2015-03-13T18:54:58.000Z"
          relatedArticlesVisible={false}
          savingEnabled={true}
          section="Some Section"
          sharingEnabled={true}
        />
      </article>
    </main>
    <AdContainer
      slotName="pixel"
    />
    <AdContainer
      slotName="pixelteads"
    />
    <AdContainer
      slotName="pixelskin"
    />
  </article>
</div>
`;
